fiex bugs z-index overlap with 3d models

--- a/src/components/modals/modal.css
+++ b/src/components/modals/modal.css
@@ -8,7 +8,7 @@
       0,
       0.7);
   /* Overlay effect: translucent background: black w/ partial opacity */
-  z-index: 1;
+  z-index: 20;
   /* Overlay effect: positioned over other containers */
   width: 100%;
   /* Full width */
